# storage/api-docs/api-docs.json
@@ -108,6 +108,29 @@
                 }
             }
         },
+        "/logout": {
+            "post": {
+                "tags": [
+                    "tmpr - User Auth Operations"
+                ],
+                "summary": "tmpr user logout",
+                "operationId": "userlogout",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized action."
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    },
+                    "302": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/users_csv_data": {
             "get": {
                 "tags": [
